--- a/.github/workflows/scraper.yaml
+++ b/.github/workflows/scraper.yaml
@@ -18,8 +18,8 @@ jobs:
         with:
           go-version: 'stable'
       - name: Run Scraper
-        # Only run for an hour at a time. Otherwise, GitHub will kill the job.
-        run: go run . -duration 3600
+        # Only run for four hours at a time. Otherwise, GitHub will kill the job.
+        run: go run . -duration 14400
       - name: Push changes
         uses: JosephNaberhaus/actions/commit-and-push@v1.3.0
         with:
